gitops/apps/observability/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.0
          ports:
            - containerPort: 3000
      #     env:
      #       - name: GF_SECURITY_ADMIN_PASSWORD
      #         valueFrom:
      #           secretKeyRef:
      #             name: grafana-admin-password
      #             key: password
      #     volumeMounts:
      #       - name: grafana-storage
      #         mountPath: /var/lib/grafana
      # volumes:
      #   - name: grafana-storage
      #     emptyDir: {}
